--- a/Tutorial/Tut_10_nodemailer/package.json
+++ b/Tutorial/Tut_10_nodemailer/package.json
@@ -11,9 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
-    "hbs": "^4.2.0",
+    "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.7.2"
   }
 }
