feat(cluster): normal way without cluster

--- a/Notes/19_Advanced_Nodejs/package.json
+++ b/Notes/19_Advanced_Nodejs/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.ts"
+    "dev": "nodemon ./02_Cluster/index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "loadtest": "^8.0.9"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
