--- a/Notes/19_Advanced_Nodejs/package.json
+++ b/Notes/19_Advanced_Nodejs/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./02_Cluster/index.ts"
+    "dev": "nodemon ./02_Cluster/primary.ts",
+    "pm2": "pm2 start ./02_Cluster/index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
-    "loadtest": "^8.0.9"
+    "loadtest": "^8.0.9",
+    "pm2": "^5.4.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
