--- a/Notes/19_Advanced_Nodejs/package.json
+++ b/Notes/19_Advanced_Nodejs/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./02_Cluster/primary.ts",
-    "pm2": "pm2 start ./02_Cluster/index.ts"
+    "pm2": "pm2 start ./02_Cluster/index.ts",
+    "pm2-stop": "pm2 stop ./02_Cluster/index.ts"
   },
   "author": "",
   "license": "ISC",
